--- a/server/index.html
+++ b/server/index.html
@@ -9,7 +9,7 @@
         width: 100%;
         height: 100%;
         border: 1px solid black;
-        /*background-image: url("/images/havnekort.jpg");*/
+        background-image: url("images/havnekort.jpg");
         background-color: #cccccc;
       }
       .map-overlay{
