--- a/server/index.html
+++ b/server/index.html
@@ -10,7 +10,9 @@
         height: 100%;
         border: 1px solid black;
         background-image: url("images/havnekort.jpg");
+        background-repeat: no-repeat;
         background-color: #cccccc;
+        margin-bottom: 20px;
       }
       .map-overlay{
         z-index: 1;
