--- a/server/index.html
+++ b/server/index.html
@@ -82,5 +82,18 @@
         });
     });
   </script>
+
+<script>
+  const protocol = document.location.protocol.startsWith('https') ? 'wss://' : 'ws://';
+  const socket = new WebSocket(protocol + "polar-sands-87869.herokuapp.com/");
+  socket.onmessage = function (event) {
+      console.log(event.data);
+      console.log("some data received");
+  };
+  socket.onerror = function (error) {
+  console.log('An error occurred while trying to connect to a Websocket!');
+  console.log(error);
+  };
+  </script>
   </body>
 </html>
