--- a/server/index.html
+++ b/server/index.html
@@ -84,7 +84,8 @@
   </script>
 
 <script>
-  const socket = new WebSocket("https://polar-sands-87869.herokuapp.com");
+  const protocol = document.location.protocol.startsWith('https') ? 'wss://' : 'ws://';
+  const socket = new WebSocket(protocol + "https://polar-sands-87869.herokuapp.com");
   socket.onmessage = function (event) {
       console.log(event.data);
       console.log("some data received");
