--- a/server/index.html
+++ b/server/index.html
@@ -77,7 +77,7 @@
       $("#"+pierId).toggleClass("red");
     });
 
-    var ws = new WebSocket("wss://polar-sands-87869.herokuapp.com/");
+    var ws = new WebSocket("wss://polar-sands-87869.herokuapp.com/:80");
     ws.onopen = function (event) {
     console.log('Connection is open ...');
     ws.send("Hello Server");
