--- a/server/index.html
+++ b/server/index.html
@@ -76,7 +76,7 @@
       let pierId = "pier"+id;
       $("#"+pierId).toggleClass("red");
     });
-    var ws = new WebSocket("wss://polar-sands-87869.herokuapp.com/");
+    const ws = new WebSocket("ws://localhost");
     ws.onopen = function (event) {
     console.log('Connection is open ...');
     ws.send("Hello Server");
