--- a/server/index.html
+++ b/server/index.html
@@ -79,8 +79,8 @@
     const ws = new WebSocket("wss://polar-sands-87869.herokuapp.com");
     //const ws = new WebSocket('ws://localhost');
     ws.onopen = function (event) {
-    console.log('Connection is open ...');
-    ws.send("Hello Server");
+      console.log('Connection is open ...');
+      //ws.send("Hello Server");
     };
     ws.onerror = function (err) {
     console.log('err: ', err);
