--- a/server/index.html
+++ b/server/index.html
@@ -77,6 +77,7 @@
       $("#"+pierId).toggleClass("red");
     });
 
+    setTimeout();
 
     function setTimeout(){
       const ws = new WebSocket("wss://polar-sands-87869.herokuapp.com");
