--- a/server/index.html
+++ b/server/index.html
@@ -84,7 +84,7 @@
       //const ws = new WebSocket('ws://localhost');
       ws.onopen = function (event) {
         console.log('Connection is open ...');
-        //ws.send("Hello Server");
+        ws.send("Hello Server");
       };
       ws.onerror = function (err) {
       console.log('err: ', err);
