--- a/server/index.html
+++ b/server/index.html
@@ -97,8 +97,8 @@
 					let JSONParsed = JSON.parse(event.data); 
           console.log("object was parsed via JSON");
           document.body.innerHTML += event.data['id'] + '&lt;br&gt;';
-          console.log(event.data['id']);
-          console.log(event.data['status']);
+          console.log(JSONParsed['id']);
+          console.log(JSONParsed['status']);
 				} catch (e) {
 					return false;
 				}
