--- a/server/index.html
+++ b/server/index.html
@@ -96,7 +96,8 @@
         try {
 					let JSONParsed = JSON.parse(event.data); 
           console.log("object was parsed via JSON");
-          document.body.innerHTML += event.data['id'] + '&lt;br&gt;';
+          document.body.innerHTML += 'id: ' + JSONParsed['id'] + '&lt;br&gt;';
+          document.body.innerHTML += 'status: ' + JSONParsed['status'] + '&lt;br&gt;';
           console.log("id: "+JSONParsed['id']);
           console.log("status: "+JSONParsed['status']);
 				} catch (e) {
