toggle with real values

--- a/server/index.html
+++ b/server/index.html
@@ -96,8 +96,12 @@
         try {
 					let JSONParsed = JSON.parse(event.data); 
           console.log("object was parsed via JSON");
+          id = JSONParsed['id'];
           document.body.innerHTML += 'id: ' + JSONParsed['id'] + '&lt;br&gt;';
           document.body.innerHTML += 'status: ' + JSONParsed['status'] + '&lt;br&gt;';
+          if (id == "1" && status == 1) {
+             $("#"+id).toggleClass("red");
+          }
           console.log("id: "+JSONParsed['id']);
           console.log("status: "+JSONParsed['status']);
 				} catch (e) {
