minor adressing fix

--- a/server/index.html
+++ b/server/index.html
@@ -100,7 +100,7 @@
           document.body.innerHTML += 'id: ' + JSONParsed['id'] + '&lt;br&gt;';
           document.body.innerHTML += 'status: ' + JSONParsed['status'] + '&lt;br&gt;';
           if (id == "1" && status == 1) {
-             $("#"+id).toggleClass("red");
+             $("#pier"+id).toggleClass("red");
           }
           console.log("id: "+JSONParsed['id']);
           console.log("status: "+JSONParsed['status']);
