changed green color

--- a/server/index.html
+++ b/server/index.html
@@ -104,7 +104,7 @@
              $("#pier"+id).css("background-color","red");
           }
           else {
-           $("#pier"+id).css("background-color","green"); 
+           $("#pier"+id).css("background-color","#00ff00"); 
           }
           console.log("id: "+JSONParsed['id']);
           console.log("status: "+JSONParsed['status']);
