--- a/server/index.html
+++ b/server/index.html
@@ -40,10 +40,13 @@
       body{
         height: 100%
       }
+      h1, p {
+        font-family: "Arial Rounded MT Bold", sans-serif !important;
+      }
     </style>
   </head>
   <body>
-  <h1>Aarhus Smart Harbor</h1>
+  <h1 style="font-weight:bold">AARHUS SMART MARINA</h1>
   <div class="map-overlay">
     <div style="margin-left: 180px">
         <div class="pier" id="pier1" >1</div>
@@ -60,11 +63,11 @@
   </div>
   <div class="map"></div>
   <div style="display: inline-block; margin-left: 40px; margin-top: 20px; padding: 30px; background-color: #F0F3F5; width: 250px;">
-    <p><b>Spot 1: </b><span id="message1">not occupied </span><span id="label1" style=" border-left: 10px; display: inline-block; height: 10px; width: 10px; background-color:#00ff00; border-radius: 100%"></span></p>
-    <p><b>Spot 2: </b><span id="message2">not occupied </span><span id="label2" style="display: inline-block; height: 10px; width: 10px; background-color:#00ff00; border-radius: 100%"></span></p>
-    <p><b>Spot 3: </b><span id="message3">not occupied </span><span id="label3" style="display: inline-block; height: 10px; width: 10px; background-color:#00ff00; border-radius: 100%"></span></p>
-    <p><b>Spot 4: </b><span id="message4">not occupied </span><span id="label4" style="display: inline-block; height: 10px; width: 10px; background-color:#00ff00; border-radius: 100%"></span></p>
-    <p><b>Spot 5: </b><span id="message5">not occupied </span><span id="label5" style="display: inline-block; height: 10px; width: 10px; background-color:#00ff00; border-radius: 100%"></span></p>
+    <p><b>Spot 1: </b><span id="message1">Not occupied </span><span id="label1" style=" border-left: 10px; display: inline-block; height: 10px; width: 10px; background-color:#00ff00; border-radius: 100%"></span></p>
+    <p><b>Spot 2: </b><span id="message2">Not occupied </span><span id="label2" style="display: inline-block; height: 10px; width: 10px; background-color:#00ff00; border-radius: 100%"></span></p>
+    <p><b>Spot 3: </b><span id="message3">Not occupied </span><span id="label3" style="display: inline-block; height: 10px; width: 10px; background-color:#00ff00; border-radius: 100%"></span></p>
+    <p><b>Spot 4: </b><span id="message4">Not occupied </span><span id="label4" style="display: inline-block; height: 10px; width: 10px; background-color:#00ff00; border-radius: 100%"></span></p>
+    <p><b>Spot 5: </b><span id="message5">Not occupied </span><span id="label5" style="display: inline-block; height: 10px; width: 10px; background-color:#00ff00; border-radius: 100%"></span></p>
   </div>
   </div>
 
@@ -103,12 +106,12 @@
           document.body.innerHTML += 'status: ' + JSONParsed['status'] + '&lt;br&gt;';
           if (status == "1") {
              $("#pier"+id).css("background-color","#00ff00");
-             $("#message"+id).text("not occupied ");
+             $("#message"+id).text("Not occupied ");
              $("#label"+id).css("background-color","00ff00");
           }
           else {
            $("#pier"+id).css("background-color","red"); 
-           $("#message"+id).text("occupied ");
+           $("#message"+id).text("Occupied ");
            $("#label"+id).css("background-color","red");
           }
           console.log("id: "+JSONParsed['id']);
