--- a/server/index.html
+++ b/server/index.html
@@ -63,12 +63,20 @@
   </div>
   <div class="map"></div>
   <div style="display: inline-block; margin-left: 40px; margin-top: 20px; padding: 30px; background-color: #F0F3F5; width: 250px;">
-    <p><b>Spot 1: </b><span id="message1">Not occupied </span><span id="label1" style=" border-left: 10px; display: inline-block; height: 10px; width: 10px; background-color:#00ff00; border-radius: 100%"></span></p>
-    <p><b>Spot 2: </b><span id="message2">Not occupied </span><span id="label2" style="display: inline-block; height: 10px; width: 10px; background-color:#00ff00; border-radius: 100%"></span></p>
-    <p><b>Spot 3: </b><span id="message3">Not occupied </span><span id="label3" style="display: inline-block; height: 10px; width: 10px; background-color:#00ff00; border-radius: 100%"></span></p>
-    <p><b>Spot 4: </b><span id="message4">Not occupied </span><span id="label4" style="display: inline-block; height: 10px; width: 10px; background-color:#00ff00; border-radius: 100%"></span></p>
-    <p><b>Spot 5: </b><span id="message5">Not occupied </span><span id="label5" style="display: inline-block; height: 10px; width: 10px; background-color:#00ff00; border-radius: 100%"></span></p>
+    <h5><b>STATUS</b></h5>
+    <p><b>Spot 1: </b><span id="message1">Not occupied </span><span id="label1" style=" border-left: 10px; display: block; float:right; margin-top: 8px; height: 10px; width: 10px; background-color:#00ff00; border-radius: 100%"></span></p>
+    <p><b>Spot 2: </b><span id="message2">Not occupied </span><span id="label2" style="display: block; float:right; margin-top: 8px; height: 10px; width: 10px; background-color:#00ff00; border-radius: 100%"></span></p>
+    <p><b>Spot 3: </b><span id="message3">Not occupied </span><span id="label3" style="display: block; float:right; margin-top: 8px; height: 10px; width: 10px; background-color:#00ff00; border-radius: 100%"></span></p>
+    <p><b>Spot 4: </b><span id="message4">Not occupied </span><span id="label4" style="display: block; float:right; margin-top: 8px; height: 10px; width: 10px; background-color:#00ff00; border-radius: 100%"></span></p>
+    <p><b>Spot 5: </b><span id="message5">Not occupied </span><span id="label5" style="display: block; float:right; margin-top: 8px; height: 10px; width: 10px; background-color:#00ff00; border-radius: 100%"></span></p>
   </div>
+  <div class="row">
+    <div style="display: inline-block; margin-left: 40px; margin-top: 20px; padding: 30px; background-color: #F0F3F5; width: 250px;">
+      <h5><b>Capacity</b></h5>
+      <div class="progress">
+        <div class="progress-bar bar bg-info" role="progressbar" style="width: 0%" aria-valuemin="0" aria-valuemax="100"></div>
+      </div>
+    </div>
   </div>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -92,11 +100,7 @@
       ws.onmessage = function (event) {
         //console.log(event.data);
         //document.body.innerHTML += event.data + '&lt;br&gt;';
-        $("#test").click(function(){
-          $("#message1").text("occupied ");
-          $("#label1").css("background-color","red");
-        });
-
+        let statusbar = 0;
         try {
 					let JSONParsed = JSON.parse(event.data); 
           console.log("object was parsed via JSON");
@@ -105,14 +109,26 @@
           document.body.innerHTML += 'id: ' + JSONParsed['id'] + '&lt;br&gt;';
           document.body.innerHTML += 'status: ' + JSONParsed['status'] + '&lt;br&gt;';
           if (status == "1") {
-             $("#pier"+id).css("background-color","#00ff00");
-             $("#message"+id).text("Not occupied ");
-             $("#label"+id).css("background-color","00ff00");
+            $("#pier"+id).css("background-color","#00ff00");
+            $("#message"+id).text("Not occupied ");
+            $("#label"+id).css("background-color","00ff00");
+            statusbar -= 20;
+            $(".progress-bar").css("width:",statusbar);
+            if(statusbar < 59){
+              $(".progress-bar").addClass("bg-info");
+              $(".progress-bar").removeClass("bg-danger");
+            }
           }
           else {
-           $("#pier"+id).css("background-color","red"); 
-           $("#message"+id).text("Occupied ");
-           $("#label"+id).css("background-color","red");
+            $("#pier"+id).css("background-color","red"); 
+            $("#message"+id).text("Occupied ");
+            $("#label"+id).css("background-color","red");
+            statusbar += 20;
+            $(".progress-bar").css("width:",statusbar);
+            if(statusbar > 59){
+              $(".progress-bar").addClass("bg-danger");
+              $(".progress-bar").removeClass("bg-info");
+            }
           }
           console.log("id: "+JSONParsed['id']);
           console.log("status: "+JSONParsed['status']);
