--- a/server/index.html
+++ b/server/index.html
@@ -46,7 +46,7 @@
     </style>
   </head>
   <body>
-  <h1 style="font-weight:bold">AARHUS SMART MARINA</h1>
+  <h1>AARHUS SMART MARINA</h1>
   <div class="map-overlay">
     <div style="margin-left: 180px">
         <div class="pier" id="pier1" >1</div>
@@ -63,7 +63,7 @@
   </div>
   <div class="map"></div>
   <div style="display: inline-block; margin-left: 40px; margin-top: 20px; padding: 30px; background-color: #F0F3F5; width: 250px;">
-    <h5><b>STATUS</b></h5>
+    <h5 style="margin-bottom: 10px;"><b>STATUS</b></h5>
     <p><b>Spot 1: </b><span id="message1">Not occupied </span><span id="label1" style=" border-left: 10px; display: block; float:right; margin-top: 8px; height: 10px; width: 10px; background-color:#00ff00; border-radius: 100%"></span></p>
     <p><b>Spot 2: </b><span id="message2">Not occupied </span><span id="label2" style="display: block; float:right; margin-top: 8px; height: 10px; width: 10px; background-color:#00ff00; border-radius: 100%"></span></p>
     <p><b>Spot 3: </b><span id="message3">Not occupied </span><span id="label3" style="display: block; float:right; margin-top: 8px; height: 10px; width: 10px; background-color:#00ff00; border-radius: 100%"></span></p>
@@ -72,7 +72,7 @@
   </div>
   <div class="row">
     <div style="display: inline-block; margin-left: 40px; margin-top: 20px; padding: 30px; background-color: #F0F3F5; width: 250px;">
-      <h5><b>Capacity</b></h5>
+      <h5 style="margin-bottom: 10px;"><b>CAPACITY</b></h5>
       <div class="progress">
         <div class="progress-bar bar bg-info" role="progressbar" style="width: 0%" aria-valuemin="0" aria-valuemax="100"></div>
       </div>
