--- a/server/index.html
+++ b/server/index.html
@@ -74,7 +74,7 @@
     <div style="display: inline-block; margin-left: 40px; margin-top: 20px; padding: 30px; background-color: #F0F3F5; width: 250px;">
       <h5 style="margin-bottom: 10px;"><b>CAPACITY</b></h5>
       <div class="progress">
-        <div class="progress-bar bar bg-info" role="progressbar" style="width: 0%" aria-valuemin="0" aria-valuemax="100"></div>
+        <div class="progress-bar bg-info" role="progressbar" style="width: 0%" aria-valuemin="0" aria-valuemax="100"></div>
       </div>
     </div>
   </div>
@@ -114,11 +114,13 @@
             $("#label"+id).css("background-color","00ff00");
             if( statusbar !== 0){
               statusbar -= 20;
+              console.log(statusbar);
             }
             $(".progress-bar").css("width:",statusbar);
             if(statusbar < 59){
               $(".progress-bar").addClass("bg-info");
               $(".progress-bar").removeClass("bg-danger");
+              console.log(statusbar);
             }
           }
           else {
