--- a/server/index.html
+++ b/server/index.html
@@ -116,7 +116,7 @@
             }
             $(".progress-bar").css("width:", statusbar+"%");
           }
-          else (status == "0") {
+          else {
             $("#pier"+id).css("background-color","red"); 
             $("#message"+id).text("Occupied ");
             $("#label"+id).css("background-color","red");
