--- a/server/index.html
+++ b/server/index.html
@@ -109,12 +109,12 @@
           if (status == "1") {
             $("#pier"+id).css("background-color","#00ff00");
             $("#message"+id).text("Not occupied ");
-            $("#label"+id).css("background-color","00ff00");
+            $("#label"+id).css("background-color","#00ff00");
             if( statusbar !== 0){
               statusbar -= 20;
               console.log(statusbar);
             }
-            $(".progress-bar").css("width:", statusbar+"%");
+            $(".progress-bar").css("width", statusbar+"%");
           }
           else {
             $("#pier"+id).css("background-color","red"); 
@@ -123,7 +123,7 @@
             if( statusbar !== 100){
               statusbar += 20;
             }
-            $(".progress-bar").css("width:", statusbar+"%");
+            $(".progress-bar").css("width", statusbar+"%");
           }
           console.log("id: "+JSONParsed['id']);
           console.log("status: "+JSONParsed['status']);
