--- a/server/index.html
+++ b/server/index.html
@@ -84,7 +84,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <script type="text/javascript">
   $( document ).ready(function() {
-
+    let statusbar = 0;
     setupWebSocket();
 
     function setupWebSocket(){
@@ -105,7 +105,6 @@
           console.log("object was parsed via JSON");
           id = JSONParsed['id'];
           status = JSONParsed['status'];
-          statusbar = 0;
           if (status == "1") {
             $("#pier"+id).css("background-color","#00ff00");
             $("#message"+id).text("Not occupied ");
